--- a/sharedline.sty
+++ b/sharedline.sty
@@ -1,7 +1,8 @@
 % sharedline.sty
 % A package for typesetting shared lines in dramatic verse.
 %
-% Copyright 2023 by [Your Name]
+% Copyright 2025 by Jacob Smullyan
+%
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either version 1.3
 % of this license or (at your option) any later version.
@@ -10,7 +11,7 @@
 % and version 1.3 or later is part of all distributions of LaTeX
 % version 2005/12/01 or later.
 %
-\ProvidesPackage{sharedline}[2023/10/27 v3.1 Simplified shareline interface]
+\ProvidesPackage{sharedline}[2025/06/26 v0.1]
 
 \RequirePackage{xparse}
 
@@ -23,7 +24,7 @@
 \newsavebox{\sl@addbox}
 
 % \shareline{<full text>}
-% STARTER command. Now takes a SINGLE mandatory argument.
+% STARTER command. Takes a single mandatory argument.
 % It typesets its argument and saves its combined width.
 \NewDocumentCommand{\shareline}{m}{%
   \sbox{\sl@linebox}{#1}%
@@ -32,8 +33,9 @@
 }
 
 % \linefeed[<intro>]{<verse>}
-% CONTINUATION command. This remains unchanged as it requires the
-% optional argument for its calculation.
+% CONTINUATION command. The optional intro argument is typeset 
+% at the start of the line; the verse begins at whatever horizontal
+% position the shared line left off.
 \NewDocumentCommand{\linefeed}{O{} m}{%
   \sbox{\sl@subtractbox}{#1}%
   #1%
@@ -46,5 +48,3 @@
 \makeatother
 
 \endinput
-%%
-%% End of file `sharedline.sty'.
